--- a/style/style.css
+++ b/style/style.css
@@ -174,6 +174,47 @@
     }
     .value-text{
         position:relative;
-        left:3%;
+        left:15%;
     }
 }
+    /*Footer container*/
+    #footer i{
+        margin-top:10px;
+        font-size:25px;
+    }
+   .footer-general{
+       margin-top:10px;
+   }
+    .footer-container{
+       background-color:#F9F3DF;
+       position: relative;
+       top:40px;
+       padding-bottom:25px;
+      padding-top:20px;
+    }
+   .element{
+       position: relative;
+       left:25%
+   }
+   .last-element-footer{
+    position: relative;
+    right: 15%;
+   }
+   .middle-element-footer{
+    position: relative;
+    right: 8%;
+   }
+    @media(max-width:576px){
+        .element{
+            position: relative;
+            left:0%;
+        }
+        .last-element-footer{
+            position: relative;
+            right: 0%;
+           }
+           .middle-element-footer{
+            position: relative;
+            right: 0%;
+           }
+    }
